k3s/apps/adguard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: homelab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.elaine.pw`)
      kind: Rule
      services:
        - name: adguard
          port: 80
  tls:
    certResolver: cloudflare
